--- a/app/views/tweets/show.erb
+++ b/app/views/tweets/show.erb
@@ -2,6 +2,6 @@
 <h2> <%= @tweet.content %> <br> </h2>
 <h3> <a href="<%= "#{@tweet.id}/edit" %>"> Edit Tweet </a> </h3>
 <h3> <form action="<%="tweets/#{@tweet.id}"%> method="POST">
-  <input id="hidden" type="hidden" name="_method" value="delete">
+  <input id="hidden" type="hidden" name="_method" value="DELETE">
   <input type="submit" value ="delete" id="Delete Tweet">
 </h3>
