--- a/app/views/tweets/edit.erb
+++ b/app/views/tweets/edit.erb
@@ -2,7 +2,7 @@
 
 <h2><%= @tweet.content %></h2>
 
-<form action="<%="/tweets/#{@tweet.id}"%>" method="POST">
+<form action="<%="/#{@tweet.id}"%>" method="POST">
     <input id="hidden" type="hidden" name="_method" value="PATCH">
   <label for="content">Content: </label>
   <input type="text" id="content" name="content" required><br><br>
