--- a/app/views/tweets/show.erb
+++ b/app/views/tweets/show.erb
@@ -1,6 +1,6 @@
 
 <h2> <%= @tweet.content %> <br> </h2>
-<h3> <a href="<%= "#{@tweet.id}/edit" %>"> Edit Tweet </a> </h3>
+<h3> <a href="<%= "/tweets/#{@tweet.id}/edit" %>"> Edit Tweet </a> </h3>
 
 <h3> <form action="<%="/tweets/#{@tweet.id}"%>" method="POST">
   <input id="hidden" type="hidden" name="_method" value="DELETE">
